--- a/inno-Doctor/content/templates/layouts/default/page.html
+++ b/inno-Doctor/content/templates/layouts/default/page.html
@@ -16,7 +16,7 @@
 
     <link rel="icon" href="{% static 'favicon.ico' %}">
 
-    <title>Simple Django Login and Registration</title>
+    <title>{% block title %} InnoDoctor{% endblock title %}</title>
 
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
@@ -27,7 +27,7 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark static-top">
 
-    <a class="navbar-brand" href="/">{% trans 'Home' %}</a>
+    <a class="navbar-brand" href="/">{% trans 'InnoDoctor' %}</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault">
         <span class="navbar-toggler-icon"></span>
@@ -36,6 +36,13 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             {% if request.user.is_authenticated %}
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'patients:patient-check' %}">{% trans 'Check Patient' %}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'patients:patient-create' %}">{% trans 'Add Patient' %}</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'accounts:change_password' %}">{% trans 'Change password' %}</a>
                 </li>
@@ -48,6 +55,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'accounts:log_out' %}">{% trans 'Log out' %}</a>
                 </li>
+
             {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'accounts:log_in' %}">{% trans 'Log in' %}</a>
