--- a/inno-Doctor/accounts/templates/accounts/patientsummary.html
+++ b/inno-Doctor/accounts/templates/accounts/patientsummary.html
@@ -9,8 +9,7 @@
 {% block content %}
 <a href="{% url 'accounts:ms' %}">Medical State</a><br>
 <a href="{% url 'accounts:pl' %}" >Problem List</a><br>
-<a href="{% url 'accounts:vs' %}">Social History</a><br>
-<a href="{% url 'accounts:sh' %}">Past Illness History</a><br>
-<a href="{% url 'accounts:pi' %}">Vital's Sign</a><br>
+<a href="{% url 'accounts:sh' %}">Social History</a><br>
+<a href="{% url 'accounts:vs' %}">Vital's Sign</a><br>
 
 {% endblock %}
