refactor: resolve patient form bug

--- a/inno-Doctor/patient_records/templates/patient_records/patient_record_form.html
+++ b/inno-Doctor/patient_records/templates/patient_records/patient_record_form.html
@@ -9,10 +9,10 @@
 <form action= "{% url 'patient_records:patient_record_list' %}"  %} method = "post">
     {% csrf_token %}
     <label for="aadharid">Enter aadhar number</label>
-        <input id="aadharid" type="number" name="aadharid"><br/>
+        <input id="aadharid" type="number" name="aadharid" required><br/>
         <label for="bdate">Enter birthdate:</label>
         <input type="date" id="bdate" name="bdate"
-            value="2022-01-01"><br/>
+            value="2022-01-01" required><br/>
         <input type="submit" value="See records">
 </form>
 
