implementation of medication items

--- a/inno-Doctor/patients/templates/patient-update.html
+++ b/inno-Doctor/patients/templates/patient-update.html
@@ -11,6 +11,7 @@
         {% bootstrap_form form %}
         <a type="button" class="btn btn-danger" href="/patients/patient-check">Cancel</a>
         <button type="submit" class="btn btn-success">Update</button>
+        <a type="button" class="btn btn-danger" href="/vitalsign/vital-sign">Vital</a>
     </form>
 </div>
 {% endblock %}
