add social history feature

--- a/inno-Doctor/patients/templates/patient-update.html
+++ b/inno-Doctor/patients/templates/patient-update.html
@@ -6,13 +6,16 @@
 {% block content %}
 <div class="card-body">
     <h4>Update Patient</h4>
-    <h2>{{patient}}</h2>
     <form method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
         <a type="button" class="btn btn-danger" href="/patients/patient-check">Cancel</a>
         <button type="submit" class="btn btn-success">Update</button>
-        <a type="button" class="btn btn-danger" href="/patient_records/vital_signf/{{ patient }}">Add Vital Signs</a>
+        <a type="button" class="btn btn-danger"
+           href="/patient_records/vital_signs">Add Vital Signs</a>
+        <a type="button" class="btn btn-danger"
+           href="/patient_records/social_history">Add Social
+            History</a>
     </form>
 </div>
 {% endblock %}
