add add problem functionality

--- a/inno-Doctor/patients/templates/patient-check.html
+++ b/inno-Doctor/patients/templates/patient-check.html
@@ -40,6 +40,13 @@
         </tbody> 
     </table>
     <a type="button" class="btn btn-info" href="#top">scroll up</a>
+    <a type="button" class="btn btn-primary"
+       href="/patient_records/vital_signs/">Add Vital Signs</a>
+    <a type="button" class="btn btn-primary"
+       href="/patient_records/social_history/">Add Social
+        History</a>
+    <a type="button" class="btn btn-primary"
+       href="/patient_records/problem_list/">Add Problem</a>
 </div>
 
 {% endblock %}
