--- a/inno-Doctor/patient_records/templates/patient_records/patient-update.html
+++ b/inno-Doctor/patient_records/templates/patient_records/patient-update.html
@@ -5,11 +5,11 @@
 
 {% block content %}
 <div class="card-body">
-    <h4>Update Patient</h4>
+    <h4>Update Patient</h4> 
     <form method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
-        <a type="button" class="btn btn-danger" href="/patients/patient-check">Cancel</a>
+        <a type="button" class="btn btn-danger" href="/patient_records/patient-check">Cancel</a>
         <button type="submit" class="btn btn-success">Update</button>
     </form>
 </div>
