add social history  | add vital sign  | add eprescription  module

--- a/inno-Doctor/patient_records/templates/patient_records/patient-details.html
+++ b/inno-Doctor/patient_records/templates/patient_records/patient-details.html
@@ -57,23 +57,23 @@
             </tr>
             <tr>
                 <td scope="col"><a type="button" class="btn btn-warning" href="/patient_records/patient-eprescription/{{ patient.aadhaarId }}">Check E-prescription</a></td>
-                <td scope="col"><a type="button" class="btn btn-warning" href="/patient_records/patient-eprescription/{{ patient.aadhaarId }}">Add  E-prescription Existing </a></td>
+                <td scope="col"><a type="button" class="btn btn-warning" href="/patient_records/patient-eprescription-create/{{ patient.aadhaarId }}">Add  E-prescription in Existing medical statement </a></td>
             </tr>
              <tr>
 
-                <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-problem-list/{{ patient.aadhaarId }}">check Problem List</a></td>
-                <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-problem-list/{{ patient.aadhaarId }}">Add Problem List</a></td>
+                <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-problem-list-view/{{ patient.aadhaarId }}">check Problem List</a></td>
+                <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-problem-list-create/{{ patient.aadhaarId }}">Add Problem List</a></td>
              </tr>
           
              <tr>
-                <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-problem-list/{{ patient.aadhaarId }}">Check Vital Signs</a></td>
-                <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-problem-list/{{ patient.aadhaarId }}">Add Vital SIgns</a></td>
+                <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-vital-sign-view/{{ patient.aadhaarId }}">Check Vital Signs</a></td>
+                <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-vital-sign-create/{{ patient.aadhaarId }}">Add Vital SIgns</a></td>
              </tr>
           
              <tr>
 
-                <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-problem-list/{{ patient.aadhaarId }}">Check Social  History</a></td>
-                <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-problem-list/{{ patient.aadhaarId }}">Add Social History</a></td>
+                <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-social-history-view/{{ patient.aadhaarId }}">Check Social  History</a></td>
+                <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-social-history-create/{{ patient.aadhaarId }}">Add Social History</a></td>
              </tr>
           
         
