--- a/inno-Doctor/content/templates/main/index.html
+++ b/inno-Doctor/content/templates/main/index.html
@@ -4,6 +4,35 @@
 
 {% block content %}
 
+
+<div id="carouselExampleIndicators"  class="carousel slide" data-ride="carousel">
+ <ol class="carousel-indicators">
+   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+ </ol>
+  <div class="carousel-inner">
+   <div class="carousel-item active">
+     <img class="d-block w-100 " style="height: 350px;" src="https://veteranfacilitator.com/wp-content/uploads/2020/10/shot_0574.png" alt="First slide">
+   </div>
+   <div class="carousel-item">
+     <img class="d-block w-100" style="height: 350px;" src="https://www.healtheuropa.eu/wp-content/uploads/2021/01/iStock-1091130498-696x392.jpg" alt="Second slide">
+   </div>
+   <div class="carousel-item">
+     <img class="d-block w-100" style="height: 350px;" src="https://online.unh.edu/sites/default/files/styles/landscape_1920_600/public/landing-page/header-image/2020/person_with_data.png?itok=P_yo4o3E&timestamp=1587409125" alt="Third slide">
+   </div>
+ </div>
+ <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+   <span class="sr-only">Previous</span>
+ </a>
+ <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+   <span class="carousel-control-next-icon" aria-hidden="true"></span>
+   <span class="sr-only">Next</span>
+ </a>
+</div>
+
+
     {% if request.user.is_authenticated %}
 
         {% trans 'Your username is' %} <b>{{ request.user.username }}</b>.
