docs: add readme

--- a/inno-Doctor/patient_records/templates/patient_records/eprescription.html
+++ b/inno-Doctor/patient_records/templates/patient_records/eprescription.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="container-fluid" style="text-align: center;">
-     <a type="button" class="btn btn-danger" href="/patient_records/patient-detail/{{aadhaarId}}">🔙</a><h2 class="d-inline align-top">Patient E-prescription </h2> 
+     <a type="button" class="btn btn-danger" href="/patient_records/patient-detail/{{aadhaarId}}">🔙</a><h2 class="d-inline align-top">Patient Medical Statement </h2>
     {% comment %} {% for medicationStatment in medicationStatements.iterator() %} {% endcomment %}
 
         {% comment %} <p> medical statment : {{medicationStatement.id}}</p> {% endcomment %}
