--- a/inno-Doctor/content/templates/layouts/default/page.html
+++ b/inno-Doctor/content/templates/layouts/default/page.html
@@ -40,7 +40,7 @@
 </head>
 
 
-<body style= "background-image: url({% static 'images/bg2.jpg' %})"  >
+<body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark static-top">
 
@@ -113,7 +113,7 @@
       <a href="#"> InnoDoctor.com</a>
     </div>
     <!-- Copyright -->
-  
+
   </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
