--- a/inno-Doctor/patient_records/templates/patient_records/patient_record_list.html
+++ b/inno-Doctor/patient_records/templates/patient_records/patient_record_list.html
@@ -3,60 +3,62 @@
 {% load bootstrap4 %}
 {% load i18n %}
 {% block content %}
+
+<div class="container" style="width:50%; margin-top: 5%; margin-bottom:5%;">
+<h1 class="text-center my-3">My EPrescription</h1>
 {% for medication_order in medication_items %}
-
-<div class="container" style="width:50%; margin-top: 5%; margin-bottom:5%;  ">
-
-<table class="table table-dark">
-    <tbody>
-        <tr>
-            <th scope="row">Name</th>
-            <td>{{medication_order.name}}</td>
-        </tr>
-        <tr>
-            <th scope="row">Medication item</th>
-            <td>{{medication_order.medication_item}}</td>
-        </tr>
-        <tr>
-            <th scope="row">Category</th>
-            <td>{{medication_order.category}}</td>
-        </tr>
-        <tr>
-            <th scope="row">route</th>
-            <td>{{medication_order.route}}</td>
-        </tr>
-    </tbody>
-</table>
-<h3>Dosage instructions</h3>
-      <table class="table table-dark">
+    <div class="border border-radius-2"></div>
+    <h3 class="my-3">Medication Order</h3>
+    <table class="table table-dark">
         <tbody>
             <tr>
-                <th scope="row">Dose amount</th>
-                <td>{{medication_order.dose_amount}}</td>
-                </tr>
-              <tr>
-                <th scope="row">Dose duration</th>
-                <td>{{medication_order.dose_duration}}</td>
-              </tr>
-              <tr>
-                <th scope="row">Dose unit</th>
-                <td>{{medication_order.dose_unit}}</td>
-              </tr>
-              <tr>
-                <th scope="row">Dose frequency</th>
-                <td>{{medication_order.dose_frequency}}</td>
-              </tr>
-              <tr>
-                <th scope="row">Dose interval</th>
-                <td>{{medication_order.dose_interval}}</td>
-              </tr>
-              <tr>
-                <th scope="row">Dose specific timing</th>
-                <td>{{medication_order.dose_specific_timing}}</td>
-              </tr>
+                <th scope="row">Name</th>
+                <td>{{medication_order.name}}</td>
+            </tr>
+            <tr>
+                <th scope="row">Medication item</th>
+                <td>{{medication_order.medication_item}}</td>
+            </tr>
+            <tr>
+                <th scope="row">Category</th>
+                <td>{{medication_order.category}}</td>
+            </tr>
+            <tr>
+                <th scope="row">route</th>
+                <td>{{medication_order.route}}</td>
+            </tr>
         </tbody>
-      </table>
-{% endfor %}
+    </table>
+    <h5>Dosage instructions</h5>
+          <table class="table table-dark">
+            <tbody>
+                <tr>
+                    <th scope="row">Dose amount</th>
+                    <td>{{medication_order.dose_amount}}</td>
+                    </tr>
+                  <tr>
+                    <th scope="row">Dose duration</th>
+                    <td>{{medication_order.dose_duration}}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Dose unit</th>
+                    <td>{{medication_order.dose_unit}}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Dose frequency</th>
+                    <td>{{medication_order.dose_frequency}}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Dose interval</th>
+                    <td>{{medication_order.dose_interval}}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Dose specific timing</th>
+                    <td>{{medication_order.dose_specific_timing}}</td>
+                  </tr>
+            </tbody>
+          </table>
+    {% endfor %}
 
 </div>
 {% endblock %}
