--- a/inno-Doctor/patient_records/templates/patient_records/patient-details.html
+++ b/inno-Doctor/patient_records/templates/patient_records/patient-details.html
@@ -46,7 +46,7 @@
                 <td>{{ patient.gender }}</td>
             </tr>
             <tr>
-                <td colspan=2><a type="button" class="btn btn-info" href="/patient_records/patient-update/{{ patient.aadhaarId }}">Update Patient Details</a></td>
+                <td colspan=2><a type="button" style="text-align:center; margin-left: 13%;" class="btn btn-info" href="/patient_records/patient-update/{{ patient.aadhaarId }}">Update Patient Details</a></td>
             </tr>
         </tbody>
     </table>
@@ -67,21 +67,21 @@
              <tr>
 
                 <td> <a type="button" class="btn btn-primary btn-sm" href="/patient_records/patient-problem-list-view/{{ patient.aadhaarId }}">Check Problem List</a></td>
-                <td> <a type="button" class="btn btn-secondary btn-sm" href="/patient_records/patient-problem-list-create/{{ patient.aadhaarId }}">Add Problem List</a></td>
+                <td> <a type="button" class="btn btn-secondary btn-sm" style="text-align:center; margin-left: 15%;" href="/patient_records/patient-problem-list-create/{{ patient.aadhaarId }}">Add Problem List</a></td>
              </tr>
           
              <tr>
                 <td> <a type="button" class="btn btn-primary btn-sm" href="/patient_records/patient-vital-sign-view/{{ patient.aadhaarId }}">Check Vital Signs</a></td>
-                <td> <a type="button" class="btn btn-secondary btn-sm" href="/patient_records/patient-vital-sign-create/{{ patient.aadhaarId }}">Add Vital SIgns</a></td>
+                <td> <a type="button" class="btn btn-secondary btn-sm" style="text-align:center; margin-left: 15%;" href="/patient_records/patient-vital-sign-create/{{ patient.aadhaarId }}">Add Vital SIgns</a></td>
              </tr>
           
              <tr>
 
                 <td> <a type="button" class="btn btn-primary btn-sm" href="/patient_records/patient-social-history-view/{{ patient.aadhaarId }}">Check Social History</a></td>
-                <td> <a type="button" class="btn btn-secondary btn-sm" href="/patient_records/patient-social-history-create/{{ patient.aadhaarId }}">Add Social History</a></td>
+                <td> <a type="button" class="btn btn-secondary btn-sm" style="text-align:center; margin-left: 15%;" href="/patient_records/patient-social-history-create/{{ patient.aadhaarId }}">Add Social History</a></td>
              </tr>
              <tr>
-                <td scope="col" colspan="2"><a type="button" class="btn btn-primary" href="/patient_records/patient-eprescription/{{ patient.aadhaarId }}">Check Medication Statements</a></td>
+                <td scope="col" colspan="2"><a type="button" style="text-align:center; margin-left: 15%;" class="btn btn-primary" href="/patient_records/patient-eprescription/{{ patient.aadhaarId }}">Check Medication Statements</a></td>
 
             </tr>
         
