--- a/inno-Doctor/patient_records/templates/patient_records/patient_record_list.html
+++ b/inno-Doctor/patient_records/templates/patient_records/patient_record_list.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="container" style="width:50%; margin-top: 5%; margin-bottom:5%;">
-<h1 class="text-center my-3">My EPrescription</h1>
+<h1 class="text-center my-3">My e-prescription</h1>
 {% for medication_order in medication_items %}
     <div class="border border-radius-2"></div>
     <h3 class="my-3">Medication Order</h3>
