fix: fix epresciption socialhistory and vitalsign forms

--- a/inno-Doctor/patient_records/templates/patient_records/patient-vital-sign-view.html
+++ b/inno-Doctor/patient_records/templates/patient_records/patient-vital-sign-view.html
@@ -43,6 +43,7 @@
                         <td scope="row">{{form.head_circumference}}</td>
                         <td scope="row">{{form.pulse_oximetry}}</td>
                         <td scope="row">{{form.body_mass_index}}</td>
+                        <td scope="row">{{form.blood_pressure_systolic}}</td>
                         <td scope="row">{{form.blood_pressure_diastolic}}</td>
 
                         <td> <a type="button" class="btn btn-warning" href="/patient_records/patient-vital-sign-edit/{{ patient.aadhaarId }}">Edit </a></td>
