--- a/inno-Doctor/patient_records/templates/patient_records/patient-problem-list-view.html
+++ b/inno-Doctor/patient_records/templates/patient_records/patient-problem-list-view.html
@@ -15,20 +15,18 @@
              <table class="table table-striped table-responsive fixed-table-body">
                  <thead class="center-block">
                      <tr>
-                         <th scope="col">problem_list_id</th>
-                         <th scope="col">problem</th>
-                         <th scope="col">body_site</th>
+                         <th scope="col">Problem</th>
+                         <th scope="col">Body Site</th>
                          <th scope="col">severity</th>
-                         <th scope="col">onset_date</th>
-                         <th scope="col">abatement_date</th>
-                         <th scope="col">diagnostic_certainty</th>
+                         <th scope="col">Onset date</th>
+                         <th scope="col">Abatement date</th>
+                         <th scope="col">Diagnostic certainty</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for item in problemLists %}
                                 <h1>{{item.item_set.all}}</h1>
                                   <tr>
-                                        <td scope="row">{{item.id}}</td>
                                         <td scope="row">{{item.problem}}</td>
                                         <td scope="row">{{item.body_site}}</td>
                                         <td scope="row">{{item.severity}}</td>
