--- a/inno-Doctor/patient_records/templates/patient_records/patient-create.html
+++ b/inno-Doctor/patient_records/templates/patient_records/patient-create.html
@@ -13,7 +13,7 @@
     <form method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
-        <button type="submit" class="btn btn-success" value="save" style="margin-left: 33%;">Add</button>
+        <a type="submit" class="btn btn-success" value="save" style="margin-left: 33%;" href="/patient_records/patient-detail/{{ patient.aadhaarId }}">Add</a>
         <a type="button" class="btn btn-danger" href="/" style="margin-left: 3%;">Cancel</a>
         
     </form>
