--- a/inno-Doctor/patient_records/templates/patient_records/patient-details.html
+++ b/inno-Doctor/patient_records/templates/patient_records/patient-details.html
@@ -15,7 +15,7 @@
     {% comment %} <a  href="/patient_records/patient-eprescription/{{patient}}"> e-prescription</a> {% endcomment %}
     {% comment %} <form action='patient-eprescription/' method="POST" enctype='multipart/form-data'>
         {% csrf_token %}
-        <input type ='hidden' value= {{Patient.aadhaarId}} name= 'aadhaarId'
+        <input type ='hidden' value= {{Patient.aadhaarId}} name= 'aadhaarId'>
         <input type='submit' value= "eprescirption"> 
     </form> {% endcomment %}
 
